Fixed Java Syntax Error
We can now pass in a chemical name, and get the data properly inside the java program. We can now adapt this to behave how we need for it to behave.